# xmonad-javran

./: .gitignore  .hlint.yaml  LICENSE  Makefile  README.md  ShakeBuild.hs  StreamConvert  TODO.md  XmodmapDef  XmodmapHHKB  build.sh  conky-json.conf  hie.yaml  package.yaml  stack.yaml  stream_convert.txt  xmodmap-HHKB  xmodmap-normal  xmonad-check-email.hs  xmonad-init.sh  xmonad-javran.cabal  xmonad.hs
cabal-zone/: Makefile
cabal-zone/src/: Main.hs
cabal-zone/src/JavranXMonad/: Config.hs  Workspace.hs
etc/: WARNING.md  conky-json.conf  conky-json.lua  conky-xmonad.conf  on-finalize.sh  on-monitor-change.sh  on-startup.sh  stream_convert.txt  xmonad-init.sh
exe/SysInfoBar/: Main.hs
exe/xmonad-javran/: Main.hs
lib/JavranXMonad/: Config.hs  StreamConvert.hs  Utils.hs
src/: MailChecker.hs  Main.hs  StreamConverter.hs
src/JavranXMonad/: Config.hs  State.hs  Utils.hs  Workspace.hs
src/XMonad/Javran/: Config.hs  Logging.hs  MailChecker.hs  Main.hs  StreamConverter.hs  SysInfoBar.hs  SystemInfoBar.hs  Utils.hs
src/XMonad/Javran/Config/: Keys.hs  LayoutHook.hs  LogHook.hs  ManageHook.hs  State.hs  Workspace.hs
src/XMonad/Javran/SysInfoBar/: Battery.hs  CpuMaxFreq.hs  CpuUsage.hs  DateTime.hs  DzenRender.hs  Mail.hs  MemUsage.hs  Mpd.hs  NetStat.hs  ProcParser.hs  SysInfoBar.hs  TH.hs  Temperature.hs  TopProc.hs  Types.hs
src/XMonad/Javran/SysInfoBar2/: Battery.hs  CpuMaxFreq.hs  CpuUsage.hs  DateTime.hs  Mail.hs  MemUsage.hs  Mpd.hs  NetStat.hs  SysInfoBar2.hs  TopProc.hs  Types.hs
