name:                xmonad-javran
version:             0.1.0.0
synopsis:            Javran's xmonad config
description:         Javran's xmonad config
homepage:            https://github.com/Javran/xmonad-javran
license:             MIT
license-file:        LICENSE
author:              Javran Cheng
maintainer:          Javran.c@gmail.com
copyright:           Copyright (c) 2014 Javran Cheng
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable xmonad-javran
  hs-source-dirs:      src
  main-is:             XMonad/Javran/Main.hs
  other-modules:       XMonad.Javran.Config
                     , XMonad.Javran.Config.State
                     , XMonad.Javran.Config.Keys
                     , XMonad.Javran.Config.Workspace
                     , XMonad.Javran.Utils
  build-depends:       base <5,
                       utf8-string,
                       filepath,
                       xmonad,
                       xmonad-contrib,
                       json,
                       containers,
                       process,
                       time,
                       xmonad-entryhelper
  ghc-options:         -Wall -O2 -threaded -main-is XMonad.Javran.Main
  default-language:    Haskell2010

executable StreamConverter
  hs-source-dirs:      src
  main-is:             XMonad/Javran/StreamConverter.hs
  other-modules:       XMonad.Javran.Utils
  build-depends:       base <5,
                       json,
                       containers
  ghc-options:         -Wall -O2 -threaded -main-is XMonad.Javran.StreamConverter
  default-language:    Haskell2010

executable MailChecker
  hs-source-dirs:      src
  main-is:             XMonad/Javran/MailChecker.hs
  build-depends:       base <5,
                       HaskellNet,
                       HaskellNet-SSL
  ghc-options:         -Wall -O2 -threaded -main-is XMonad.Javran.MailChecker
  default-language:    Haskell2010
