name:                xmonad-javran
version:             0.1.0.0
synopsis:            Javran's xmonad config
description:         Javran's xmonad config
homepage:            https://github.com/Javran/xmonad-javran
license:             MIT
license-file:        LICENSE
author:              Javran Cheng
maintainer:          Javran.c@gmail.com
copyright:           Copyright (c) 2014 Javran Cheng
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable xmonad-javran
  hs-source-dirs:      src
  main-is:             XMonad/Javran/Main.hs
  other-modules:       XMonad.Javran.Config
                     , XMonad.Javran.Config.State
                     , XMonad.Javran.Config.Keys
                     , XMonad.Javran.Config.Workspace
                     , XMonad.Javran.Config.LogHook
                     , XMonad.Javran.Config.LayoutHook
                     , XMonad.Javran.Config.ManageHook
                     , XMonad.Javran.Utils
  build-depends:       base <5
                     , filepath
                     , xmonad
                     , xmonad-contrib
                     , json
                     , containers
                     , process
                     , bytestring
                     , time
                     , xmonad-entryhelper
                     , colour
                     , dzen-utils
                     , text
  ghc-options:         -Wall -O2 -threaded -main-is XMonad.Javran.Main
  default-language:    Haskell2010

executable StreamConverter
  hs-source-dirs:      src
  main-is:             XMonad/Javran/StreamConverter.hs
  other-modules:       XMonad.Javran.Utils
  build-depends:       base <5
                     , json
                     , containers
                     , text
                     , bytestring
  ghc-options:         -Wall -O2 -threaded -main-is XMonad.Javran.StreamConverter
  default-language:    Haskell2010


executable SysInfoBar
  hs-source-dirs:      src
  main-is:             XMonad/Javran/SysInfoBar.hs
  build-depends:       base <5
                     , json
                     , containers
                     , text
                     , bytestring
                     , time
  ghc-options:         -Wall -O2 -threaded -main-is XMonad.Javran.SystemInfoBar
  default-language:    Haskell2010

executable MailChecker
  hs-source-dirs:      src
  main-is:             XMonad/Javran/MailChecker.hs
  build-depends:       base <5,
                       HaskellNet
                     , HaskellNet-SSL
  ghc-options:         -Wall -O2 -threaded -main-is XMonad.Javran.MailChecker
  default-language:    Haskell2010
