name:                xmonad-javran
version:             0.1.0.0
synopsis:            Javran's xmonad config
description:         Javran's xmonad config
homepage:            https://github.com/Javran/xmonad-javran
license:             MIT
license-file:        LICENSE
author:              Javran Cheng
maintainer:          Javran.c@gmail.com
copyright:           Copyright (c) 2014 Javran Cheng
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable xmonad-javran
  hs-source-dirs:      src
  main-is:             XMonad/Javran/Main.hs
  other-modules:       XMonad.Javran.Config
                     , XMonad.Javran.Config.State
                     , XMonad.Javran.Config.Keys
                     , XMonad.Javran.Config.Workspace
                     , XMonad.Javran.Config.LogHook
                     , XMonad.Javran.Config.LayoutHook
                     , XMonad.Javran.Config.ManageHook
                     , XMonad.Javran.Utils
  build-depends:       base <5
                     , filepath
                     , xmonad
                     , xmonad-contrib
                     , json
                     , containers
                     , process
                     , bytestring
                     , time
                     , xmonad-entryhelper
                     , colour
                     , dzen-utils
                     , text
  ghc-options:         -Wall -O2 -threaded -main-is XMonad.Javran.Main
  default-language:    Haskell2010

executable SysInfoBar
  hs-source-dirs:      src
  main-is:             XMonad/Javran/SysInfoBar.hs
  other-modules:       XMonad.Javran.SysInfoBar.Types
                     , XMonad.Javran.SysInfoBar.CpuUsage
                     , XMonad.Javran.SysInfoBar.MemUsage
                     , XMonad.Javran.SysInfoBar.CpuMaxFreq
                     , XMonad.Javran.SysInfoBar.DateTime
                     , XMonad.Javran.SysInfoBar.NetStat
                     , XMonad.Javran.SysInfoBar.Mpd
                     , XMonad.Javran.SysInfoBar.Battery
                     , XMonad.Javran.SysInfoBar.Mail
                     , XMonad.Javran.SysInfoBar.TopProc
                     , XMonad.Javran.SysInfoBar.TH
                     , XMonad.Javran.Utils
  build-depends:       base <5
                     , json
                     , containers
                     , text
                     , bytestring
                     , time
                     , data-default
                     , lens
                     , libmpd
                     , directory
                     , HaskellNet
                     , HaskellNet-SSL
                     , template-haskell
                     , process
                     , dzen-utils
                     , colour

  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N -main-is XMonad.Javran.SysInfoBar
  default-language:    Haskell2010
